Fixed alignment and added more movies

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     background-color: #B5CAE9;
 }
 
+.MovieListGridItemImage{
+    width: 100%;
+}
+
 #website_heading {
     position:relative;
     color:black;
@@ -43,13 +47,8 @@ li a:active {
  }
 
 #HeroStuff{
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/A_black_image.jpg/640px-A_black_image.jpg);
-    background-position: right bottom, left top;
-    background-repeat: no-repeat, repeat;
-    padding: 15px;
     background-color: black;
     width:100%;
-    box-shadow: 0px 0px 30px rgb(221, 137, 10);
     overflow: hidden;
 }
 #HeroDesc{
@@ -57,16 +56,16 @@ li a:active {
     color:#B5CAE9;
     font-family: "Staatliches", sans-serif;
     font-size: 64px;
-    left:1100px;
+    left:1200px;
     top:200px;
 }
 .MovieListGrid{
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 100px;
     column-gap:100px;
     row-gap:66px;
     align-content: center;
+    width:100%;
 }
 .MovieListGridItem{
     padding: 20px;
@@ -76,4 +75,8 @@ li a:active {
 .MovieListGridItemDesc{
     font-family: "Staatliches", sans-serif;
     font-size: 40px;
+}
+#HeroImage{
+    box-shadow: 0px 0px 70px #B5CAE9;
+    margin:50px;
 }
